# qt-project-template

./: CMakeLists.txt  README.md
bats/: Compile.bat
scripts/: Build.bat
src/: Main.cpp  MainWindow.cpp  MainWindow.hpp
